--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -187,8 +187,7 @@
     display: flex;
     flex-direction: column;
     background: #fff;
-    width: 100% !important;
-    max-width: 320px;
+    width: 238px !important;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
 }
 
@@ -459,7 +458,7 @@
     }
 
     .single_product {
-        max-width: 100%;
+        width: 320px !important;
     }
     
     .owl-carousel .item {
@@ -573,7 +572,7 @@
     }
 
     .single_product {
-        max-width: 320px;
+        width: 238px !important;
     }
     
     .product_thumb {
@@ -647,6 +646,6 @@
 
 @media (min-width: 1400px) {
     .single_product {
-        max-width: 340px;
+        width: 238px !important;
     }
 } 
