--- a/templates/filial/index.html
+++ b/templates/filial/index.html
@@ -15,7 +15,18 @@
             <i class="fas fa-users fa-2x text-primary"></i>
           </div>
           <h5 class="card-title">Foydalanuvchilar</h5>
-          <h3>1,234</h3>
+          <h3>{{user_count}}</h3>
+        </div>
+      </div>
+    </div>
+     <div class="col-md-6 col-xl-3">
+      <div class="card shadow-sm border-0 text-center">
+        <div class="card-body">
+          <div class="mb-3">
+            <i class="fas fa-users fa-2x text-primary"></i>
+          </div>
+          <h5 class="card-title">Faol Foydalanuvchilar</h5>
+          <h3>{{user_count_active}}</h3>
         </div>
       </div>
     </div>
@@ -28,7 +39,7 @@
             <i class="fas fa-shopping-cart fa-2x text-success"></i>
           </div>
           <h5 class="card-title">Buyurtmalar</h5>
-          <h3>567</h3>
+          <h3>{{count}}</h3>
         </div>
       </div>
     </div> 
@@ -39,7 +50,7 @@
             <i class="fas fa-shopping-cart fa-2x text-success"></i>
           </div>
           <h5 class="card-title"> Bubungi Buyurtmalar</h5>
-          <h3>150</h3>
+          <h3>{{count_now}}</h3>
         </div>
       </div>
     </div>
@@ -47,17 +58,7 @@
   
 
     <!-- Kartochka 4 -->
-    <div class="col-md-6 col-xl-3">
-      <div class="card shadow-sm border-0 text-center">
-        <div class="card-body">
-          <div class="mb-3">
-            <i class="fas fa-chart-line fa-2x text-danger"></i>
-          </div>
-          <h5 class="card-title">Faollik</h5>
-          <h3>85%</h3>
-        </div>
-      </div>
-    </div>
+
   </div>
 </div>
 
