--- a/templates/index.html
+++ b/templates/index.html
@@ -95,6 +95,35 @@
                     </div>
                 </div>
                 {% endfor %}
+                {% if not category and data %}
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                        {% if page > 1 %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ page|add:-1 }}" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                        {% endif %}
+                        
+                        {% for p in paginator.page_range %}
+                            {% if p == page %}
+                                <li class="page-item active"><a class="page-link" href="#">{{ p }}</a></li>
+                            {% else %}
+                                <li class="page-item"><a class="page-link" href="?page={{ p }}">{{ p }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                        
+                        {% if page < paginator.num_pages %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ page|add:1 }}" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+                {% endif %}
             </div>
         </div>
     </div>
