--- a/templates/base.html
+++ b/templates/base.html
@@ -2197,6 +2197,9 @@ border: none !important;
                                 <a href="/front/vacancies/">Вакансии</a>
                                 <a href="/front/operator/">Наши аптеки</a>
                                 <a href="/front/resipe/">Загрузи рецепт</a>
+                                {% if request.user.is_staff %}
+                                <a href="/filial">Филял</a>
+                                {% endif%}
                                 <div class="language-dropdown" onclick="toggleDropdown()">
                                     <div class="selected-language">Рус</div>
                                     <ul class="language-options">
