--- a/templates/filial/product-create.html
+++ b/templates/filial/product-create.html
@@ -1,17 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="../static/assets/css/bootstrap.min.css">
-    <!-- Bootstrap JS (CDN) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
-   
-    <br>
+ 
+
+
+
+
+{% extends 'base_filial.html' %}
+
+{% block title %}Mahsulot yaratish{% endblock %}
+
+{% block content %}
+ 
+
+
+
+
+
+   <br>
     <div class="container">
         <div class="row justify-content-center">
             
@@ -68,4 +72,4 @@
         document.getElementById('myForm').reset();
     });
     </script>
-</html>
+{% endblock %}
